--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Formularios\FrmAltaHerramientas.Designer.cs">
       <DependentUpon>FrmAltaHerramientas.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\FrmModificacionHerramientas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\FrmModificacionHerramientas.Designer.cs">
+      <DependentUpon>FrmModificacionHerramientas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\FrmTareas.cs">
       <SubType>Form</SubType>
     </Compile>
