--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -64,12 +64,25 @@
     <Compile Include="Clases\TratamientosEspeciales.cs" />
     <Compile Include="Entidades\ClaseBase.cs" />
     <Compile Include="Entidades\Herramienta.cs" />
+    <Compile Include="Entidades\Rol.cs" />
     <Compile Include="Entidades\Usuario.cs" />
+    <Compile Include="Formularios\FrmABMRoles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\FrmABMRoles.Designer.cs">
+      <DependentUpon>FrmABMRoles.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\FrmABMHerramientas.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Formularios\FrmABMHerramientas.Designer.cs">
       <DependentUpon>FrmABMHerramientas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\FrmAltaRoles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\FrmAltaRoles.Designer.cs">
+      <DependentUpon>FrmAltaRoles.cs</DependentUpon>
     </Compile>
     <Compile Include="Formularios\FrmAltaHerramientas.cs">
       <SubType>Form</SubType>
@@ -102,11 +115,18 @@
       <DependentUpon>FrmPromedios.cs</DependentUpon>
     </Compile>
     <Compile Include="Negocio\Ng_Herramienta.cs" />
+    <Compile Include="Negocio\Ng_Rol.cs" />
     <Compile Include="Negocio\Ng_Usuario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Formularios\FrmABMRoles.resx">
+      <DependentUpon>FrmABMRoles.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmABMHerramientas.resx">
       <DependentUpon>FrmABMHerramientas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\FrmAltaRoles.resx">
+      <DependentUpon>FrmAltaRoles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmAltaHerramientas.resx">
       <DependentUpon>FrmAltaHerramientas.cs</DependentUpon>
