--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -72,34 +72,28 @@
     <Compile Include="Formularios\FrmAMBase.Designer.cs">
       <DependentUpon>FrmAMBase.cs</DependentUpon>
     </Compile>
-    <Compile Include="Formularios\FrmABMRoles.cs">
+    <Compile Include="Formularios\Roles\FrmABMRoles.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Formularios\FrmABMRoles.Designer.cs">
+    <Compile Include="Formularios\Roles\FrmABMRoles.Designer.cs">
       <DependentUpon>FrmABMRoles.cs</DependentUpon>
     </Compile>
-    <Compile Include="Formularios\FrmABMHerramientas.cs">
+    <Compile Include="Formularios\Herramientas\FrmABMHerramientas.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Formularios\FrmABMHerramientas.Designer.cs">
+    <Compile Include="Formularios\Herramientas\FrmABMHerramientas.Designer.cs">
       <DependentUpon>FrmABMHerramientas.cs</DependentUpon>
     </Compile>
-    <Compile Include="Formularios\FrmAltaRoles.cs">
+    <Compile Include="Formularios\Roles\FrmAltaRoles.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Formularios\FrmAltaRoles.Designer.cs">
+    <Compile Include="Formularios\Roles\FrmAltaRoles.Designer.cs">
       <DependentUpon>FrmAltaRoles.cs</DependentUpon>
     </Compile>
-    <Compile Include="Formularios\FrmAltaHerramientas.cs">
+    <Compile Include="Formularios\Herramientas\FrmAMHerramientas.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Formularios\FrmAltaHerramientas.Designer.cs">
-      <DependentUpon>FrmAltaHerramientas.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Formularios\FrmAMHerramientas.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Formularios\FrmAMHerramientas.Designer.cs">
+    <Compile Include="Formularios\Herramientas\FrmAMHerramientas.Designer.cs">
       <DependentUpon>FrmAMHerramientas.cs</DependentUpon>
     </Compile>
     <Compile Include="Formularios\FrmTareas.cs">
@@ -126,6 +120,12 @@
     <Compile Include="Formularios\FrmPromedios.Designer.cs">
       <DependentUpon>FrmPromedios.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\Roles\FrmAMRoles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Roles\FrmAMRoles.Designer.cs">
+      <DependentUpon>FrmAMRoles.cs</DependentUpon>
+    </Compile>
     <Compile Include="Negocio\Ng_Herramienta.cs" />
     <Compile Include="Negocio\Ng_Rol.cs" />
     <Compile Include="Negocio\Ng_Usuario.cs" />
@@ -134,19 +134,16 @@
     <EmbeddedResource Include="Formularios\FrmAMBase.resx">
       <DependentUpon>FrmAMBase.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\FrmABMRoles.resx">
+    <EmbeddedResource Include="Formularios\Roles\FrmABMRoles.resx">
       <DependentUpon>FrmABMRoles.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\FrmABMHerramientas.resx">
+    <EmbeddedResource Include="Formularios\Herramientas\FrmABMHerramientas.resx">
       <DependentUpon>FrmABMHerramientas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\FrmAltaRoles.resx">
+    <EmbeddedResource Include="Formularios\Roles\FrmAltaRoles.resx">
       <DependentUpon>FrmAltaRoles.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\FrmAltaHerramientas.resx">
-      <DependentUpon>FrmAltaHerramientas.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\FrmAMHerramientas.resx">
+    <EmbeddedResource Include="Formularios\Herramientas\FrmAMHerramientas.resx">
       <DependentUpon>FrmAMHerramientas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmPromedios.resx">
@@ -160,6 +157,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Roles\FrmAMRoles.resx">
+      <DependentUpon>FrmAMRoles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
