--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -66,11 +66,23 @@
     <Compile Include="Entidades\Herramienta.cs" />
     <Compile Include="Entidades\Rol.cs" />
     <Compile Include="Entidades\Usuario.cs" />
+    <Compile Include="Formularios\FrmABMBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\FrmABMBase.Designer.cs">
+      <DependentUpon>FrmABMBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\FrmAMBase.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Formularios\FrmAMBase.Designer.cs">
       <DependentUpon>FrmAMBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Herramientas\FrmABMCHerramientas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Herramientas\FrmABMCHerramientas.Designer.cs">
+      <DependentUpon>FrmABMCHerramientas.cs</DependentUpon>
     </Compile>
     <Compile Include="Formularios\Roles\FrmABMRoles.cs">
       <SubType>Form</SubType>
@@ -83,12 +95,6 @@
     </Compile>
     <Compile Include="Formularios\Herramientas\FrmABMHerramientas.Designer.cs">
       <DependentUpon>FrmABMHerramientas.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Formularios\Roles\FrmAltaRoles.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Formularios\Roles\FrmAltaRoles.Designer.cs">
-      <DependentUpon>FrmAltaRoles.cs</DependentUpon>
     </Compile>
     <Compile Include="Formularios\Herramientas\FrmAMHerramientas.cs">
       <SubType>Form</SubType>
@@ -131,17 +137,20 @@
     <Compile Include="Negocio\Ng_Usuario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Formularios\FrmABMBase.resx">
+      <DependentUpon>FrmABMBase.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmAMBase.resx">
       <DependentUpon>FrmAMBase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Herramientas\FrmABMCHerramientas.resx">
+      <DependentUpon>FrmABMCHerramientas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Roles\FrmABMRoles.resx">
       <DependentUpon>FrmABMRoles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Herramientas\FrmABMHerramientas.resx">
       <DependentUpon>FrmABMHerramientas.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\Roles\FrmAltaRoles.resx">
-      <DependentUpon>FrmAltaRoles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Herramientas\FrmAMHerramientas.resx">
       <DependentUpon>FrmAMHerramientas.cs</DependentUpon>
