Clase etapas y creacion de clase de negocio

--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -63,6 +63,7 @@
     </Compile>
     <Compile Include="Clases\TratamientosEspeciales.cs" />
     <Compile Include="Entidades\ClaseBase.cs" />
+    <Compile Include="Entidades\Etapa.cs" />
     <Compile Include="Entidades\Herramienta.cs" />
     <Compile Include="Entidades\Rol.cs" />
     <Compile Include="Entidades\Usuario.cs" />
@@ -126,6 +127,7 @@
     <Compile Include="Formularios\Roles\FrmAMRoles.Designer.cs">
       <DependentUpon>FrmAMRoles.cs</DependentUpon>
     </Compile>
+    <Compile Include="Negocio\Ng_Etapa.cs" />
     <Compile Include="Negocio\Ng_Herramienta.cs" />
     <Compile Include="Negocio\Ng_Rol.cs" />
     <Compile Include="Negocio\Ng_Usuario.cs" />
