AC Herramientas completo

--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -67,6 +67,18 @@
     <Compile Include="Entidades\Herramienta.cs" />
     <Compile Include="Entidades\Rol.cs" />
     <Compile Include="Entidades\Usuario.cs" />
+    <Compile Include="Formularios\Etapas\FrmABMCEtapas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Etapas\FrmABMCEtapas.Designer.cs">
+      <DependentUpon>FrmABMCEtapas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Etapas\FrmAMEtapas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Etapas\FrmAMEtapas.Designer.cs">
+      <DependentUpon>FrmAMEtapas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\FrmABMBase.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +145,12 @@
     <Compile Include="Negocio\Ng_Usuario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Formularios\Etapas\FrmABMCEtapas.resx">
+      <DependentUpon>FrmABMCEtapas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Etapas\FrmAMEtapas.resx">
+      <DependentUpon>FrmAMEtapas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\FrmABMBase.resx">
       <DependentUpon>FrmABMBase.cs</DependentUpon>
     </EmbeddedResource>
