--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -58,6 +58,27 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Clases\EstructuraComboBox.cs" />
+    <Compile Include="Clases\Exporador01.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Clases\Exporador01.designer.cs">
+      <DependentUpon>Exporador01.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Clases\Grid01.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Clases\LabelText01.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Clases\LabelText01.designer.cs">
+      <DependentUpon>LabelText01.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Clases\LabelText02.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Clases\LabelText02.designer.cs">
+      <DependentUpon>LabelText02.cs</DependentUpon>
+    </Compile>
     <Compile Include="Clases\TextBox01.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -215,6 +236,15 @@
     <Compile Include="Negocio\Ng_Usuario.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Clases\Exporador01.resx">
+      <DependentUpon>Exporador01.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Clases\LabelText01.resx">
+      <DependentUpon>LabelText01.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Clases\LabelText02.resx">
+      <DependentUpon>LabelText02.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Clientes\FrmABMCCliente.resx">
       <DependentUpon>FrmABMCCliente.cs</DependentUpon>
     </EmbeddedResource>
