Reporte de finalizacion

--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -40,6 +40,24 @@
     <Reference Include="FontAwesome.Sharp, Version=5.13.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\FontAwesome.Sharp.5.13.0\lib\net472\FontAwesome.Sharp.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1404.0\lib\net40\Microsoft.ReportViewer.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.DataVisualization, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1404.0\lib\net40\Microsoft.ReportViewer.DataVisualization.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.Design, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1404.0\lib\net40\Microsoft.ReportViewer.Design.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1404.0\lib\net40\Microsoft.ReportViewer.ProcessingObjectModel.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1404.0\lib\net40\Microsoft.ReportViewer.WinForms.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlServer.Types, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.SqlServer.Types.14.0.314.76\lib\net40\Microsoft.SqlServer.Types.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -83,6 +101,14 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Clases\TratamientosEspeciales.cs" />
+    <Compile Include="ConjuntoDeDatos\datosEstadisticos.cs">
+      <DependentUpon>datosEstadisticos.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="ConjuntoDeDatos\datosEstadisticos.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>datosEstadisticos.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\ClaseBase.cs" />
     <Compile Include="Entidades\Cliente.cs" />
     <Compile Include="Entidades\Empleado.cs" />
@@ -179,6 +205,12 @@
     <Compile Include="Formularios\Productos\FrmAMProducto.Designer.cs">
       <DependentUpon>FrmAMProducto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\Reportes\ReporteTiempoProyecto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Reportes\ReporteTiempoProyecto.Designer.cs">
+      <DependentUpon>ReporteTiempoProyecto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\Roles\FrmABMCRoles.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -257,6 +289,7 @@
     <Compile Include="Formularios\VentaProducto\FrmVentaProducto.Designer.cs">
       <DependentUpon>FrmVentaProducto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Negocio\Ng_Proyecto.cs" />
     <Compile Include="Negocio\Ng_Cliente.cs" />
     <Compile Include="Negocio\Ng_Empleado.cs" />
     <Compile Include="Negocio\Ng_Etapa.cs" />
@@ -267,8 +300,19 @@
     <Compile Include="Negocio\Ng_TipDoc.cs" />
     <Compile Include="Negocio\Ng_Usuario.cs" />
     <Compile Include="Negocio\Ng_VentaProducto.cs" />
+    <Compile Include="pavTpGrupalDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>pavTpGrupalDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="pavTpGrupalDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>pavTpGrupalDataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlServerTypes\Loader.cs" />
     <EmbeddedResource Include="Clases\Exporador01.resx">
       <DependentUpon>Exporador01.cs</DependentUpon>
     </EmbeddedResource>
@@ -320,6 +364,10 @@
     <EmbeddedResource Include="Formularios\Productos\FrmAMProducto.resx">
       <DependentUpon>FrmAMProducto.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Reportes\ReporteTiempoProyecto.resx">
+      <DependentUpon>ReporteTiempoProyecto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Reportes\rpt_TiempoPorProyecto.rdlc" />
     <EmbeddedResource Include="Formularios\Roles\FrmABMCRoles.resx">
       <DependentUpon>FrmABMCRoles.cs</DependentUpon>
     </EmbeddedResource>
@@ -363,7 +411,40 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="ConjuntoDeDatos\datosEstadisticos.xsc">
+      <DependentUpon>datosEstadisticos.xsd</DependentUpon>
+    </None>
+    <None Include="ConjuntoDeDatos\datosEstadisticos.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>datosEstadisticos.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="ConjuntoDeDatos\datosEstadisticos.xss">
+      <DependentUpon>datosEstadisticos.xsd</DependentUpon>
+    </None>
     <None Include="packages.config" />
+    <None Include="pavTpGrupalDataSet.xsc">
+      <DependentUpon>pavTpGrupalDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="pavTpGrupalDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>pavTpGrupalDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="pavTpGrupalDataSet.xss">
+      <DependentUpon>pavTpGrupalDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="pavTpGrupalDataSet1.xsc">
+      <DependentUpon>pavTpGrupalDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="pavTpGrupalDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>pavTpGrupalDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="pavTpGrupalDataSet1.xss">
+      <DependentUpon>pavTpGrupalDataSet1.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -384,6 +465,21 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="FontAwesome\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SqlServerTypes\readme.htm" />
+    <Content Include="SqlServerTypes\x64\msvcr120.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x64\SqlServerSpatial140.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x86\msvcr120.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
