--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -101,14 +101,6 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Clases\TratamientosEspeciales.cs" />
-    <Compile Include="ConjuntoDeDatos\datosEstadisticos.cs">
-      <DependentUpon>datosEstadisticos.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="ConjuntoDeDatos\datosEstadisticos.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>datosEstadisticos.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Entidades\ClaseBase.cs" />
     <Compile Include="Entidades\Cliente.cs" />
     <Compile Include="Entidades\Empleado.cs" />
@@ -144,12 +136,6 @@
     </Compile>
     <Compile Include="Formularios\Empleados\FrmAMEmpleados.Designer.cs">
       <DependentUpon>FrmAMEmpleados.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Formularios\Empleados\FrmEgreso.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Formularios\Empleados\FrmEgreso.Designer.cs">
-      <DependentUpon>FrmEgreso.cs</DependentUpon>
     </Compile>
     <Compile Include="Formularios\Etapas\FrmABMCEtapas.cs">
       <SubType>Form</SubType>
@@ -204,12 +190,6 @@
     </Compile>
     <Compile Include="Formularios\Productos\FrmAMProducto.Designer.cs">
       <DependentUpon>FrmAMProducto.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Formularios\Reportes\ReporteTiempoProyecto.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Formularios\Reportes\ReporteTiempoProyecto.Designer.cs">
-      <DependentUpon>ReporteTiempoProyecto.cs</DependentUpon>
     </Compile>
     <Compile Include="Formularios\Roles\FrmABMCRoles.cs">
       <SubType>Form</SubType>
@@ -271,6 +251,12 @@
     <Compile Include="Formularios\Proyectos\FrmNuevoProyecto.Designer.cs">
       <DependentUpon>FrmNuevoProyecto.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\VentaProducto\FrmActualizarVenta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\VentaProducto\FrmActualizarVenta.Designer.cs">
+      <DependentUpon>FrmActualizarVenta.cs</DependentUpon>
+    </Compile>
     <Compile Include="Formularios\VentaProducto\FrmNuevaVenta.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -289,7 +275,6 @@
     <Compile Include="Formularios\VentaProducto\FrmVentaProducto.Designer.cs">
       <DependentUpon>FrmVentaProducto.cs</DependentUpon>
     </Compile>
-    <Compile Include="Negocio\Ng_Proyecto.cs" />
     <Compile Include="Negocio\Ng_Cliente.cs" />
     <Compile Include="Negocio\Ng_Empleado.cs" />
     <Compile Include="Negocio\Ng_Etapa.cs" />
@@ -300,18 +285,19 @@
     <Compile Include="Negocio\Ng_TipDoc.cs" />
     <Compile Include="Negocio\Ng_Usuario.cs" />
     <Compile Include="Negocio\Ng_VentaProducto.cs" />
-    <Compile Include="pavTpGrupalDataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>pavTpGrupalDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="pavTpGrupalDataSet1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>pavTpGrupalDataSet1.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reportes\VentaProducto\Ds_VentaProducto.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Ds_VentaProducto.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\VentaProducto\FrmReporteVentaProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\VentaProducto\FrmReporteVentaProducto.Designer.cs">
+      <DependentUpon>FrmReporteVentaProducto.cs</DependentUpon>
+    </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <EmbeddedResource Include="Clases\Exporador01.resx">
       <DependentUpon>Exporador01.cs</DependentUpon>
@@ -333,9 +319,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Empleados\FrmAMEmpleados.resx">
       <DependentUpon>FrmAMEmpleados.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\Empleados\FrmEgreso.resx">
-      <DependentUpon>FrmEgreso.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Etapas\FrmABMCEtapas.resx">
       <DependentUpon>FrmABMCEtapas.cs</DependentUpon>
@@ -364,10 +347,6 @@
     <EmbeddedResource Include="Formularios\Productos\FrmAMProducto.resx">
       <DependentUpon>FrmAMProducto.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\Reportes\ReporteTiempoProyecto.resx">
-      <DependentUpon>ReporteTiempoProyecto.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Formularios\Reportes\rpt_TiempoPorProyecto.rdlc" />
     <EmbeddedResource Include="Formularios\Roles\FrmABMCRoles.resx">
       <DependentUpon>FrmABMCRoles.cs</DependentUpon>
     </EmbeddedResource>
@@ -398,6 +377,9 @@
     <EmbeddedResource Include="Formularios\Proyectos\FrmNuevoProyecto.resx">
       <DependentUpon>FrmNuevoProyecto.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\VentaProducto\FrmActualizarVenta.resx">
+      <DependentUpon>FrmActualizarVenta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\VentaProducto\FrmNuevaVenta.resx">
       <DependentUpon>FrmNuevaVenta.cs</DependentUpon>
     </EmbeddedResource>
@@ -411,40 +393,11 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="ConjuntoDeDatos\datosEstadisticos.xsc">
-      <DependentUpon>datosEstadisticos.xsd</DependentUpon>
-    </None>
-    <None Include="ConjuntoDeDatos\datosEstadisticos.xsd">
-      <SubType>Designer</SubType>
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>datosEstadisticos.Designer.cs</LastGenOutput>
-    </None>
-    <None Include="ConjuntoDeDatos\datosEstadisticos.xss">
-      <DependentUpon>datosEstadisticos.xsd</DependentUpon>
-    </None>
+    <EmbeddedResource Include="Reportes\VentaProducto\FrmReporteVentaProducto.resx">
+      <DependentUpon>FrmReporteVentaProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\VentaProducto\ReporteVentaProducto.rdlc" />
     <None Include="packages.config" />
-    <None Include="pavTpGrupalDataSet.xsc">
-      <DependentUpon>pavTpGrupalDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="pavTpGrupalDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>pavTpGrupalDataSet.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="pavTpGrupalDataSet.xss">
-      <DependentUpon>pavTpGrupalDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="pavTpGrupalDataSet1.xsc">
-      <DependentUpon>pavTpGrupalDataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="pavTpGrupalDataSet1.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>pavTpGrupalDataSet1.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="pavTpGrupalDataSet1.xss">
-      <DependentUpon>pavTpGrupalDataSet1.xsd</DependentUpon>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -459,6 +412,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Reportes\VentaProducto\Ds_VentaProducto.xsc">
+      <DependentUpon>Ds_VentaProducto.xsd</DependentUpon>
+    </None>
+    <None Include="Reportes\VentaProducto\Ds_VentaProducto.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Ds_VentaProducto.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Reportes\VentaProducto\Ds_VentaProducto.xss">
+      <DependentUpon>Ds_VentaProducto.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
