--- a/TPI NewWare/App.config
+++ b/TPI NewWare/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="TPI_NewWare.Properties.Settings.pavTpGrupalConnectionString"
+            connectionString="Data Source=pavTpGrupal.mssql.somee.com;Initial Catalog=pavTpGrupal;Persist Security Info=True;User ID=ebertalem_SQLLogin_1;Password=4m8u7yha3i"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
