--- a/TPI NewWare/TPI NewWare.csproj
+++ b/TPI NewWare/TPI NewWare.csproj
@@ -277,6 +277,7 @@
     </Compile>
     <Compile Include="Negocio\Ng_Cliente.cs" />
     <Compile Include="Negocio\Ng_Empleado.cs" />
+    <Compile Include="Negocio\Ng_EmpleadoProyecto.cs" />
     <Compile Include="Negocio\Ng_Etapa.cs" />
     <Compile Include="Negocio\Ng_Herramienta.cs" />
     <Compile Include="Negocio\Ng_MotivoEgreso.cs" />
@@ -285,8 +286,19 @@
     <Compile Include="Negocio\Ng_TipDoc.cs" />
     <Compile Include="Negocio\Ng_Usuario.cs" />
     <Compile Include="Negocio\Ng_VentaProducto.cs" />
+    <Compile Include="pavTpGrupalDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>pavTpGrupalDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reportes\EmpleadoProyecto\EmpleadoProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Reportes\EmpleadoProyecto\EmpleadoProducto.Designer.cs">
+      <DependentUpon>EmpleadoProducto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\VentaProducto\Ds_VentaProducto.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -393,11 +405,26 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\EmpleadoProyecto\EmpleadoProducto.resx">
+      <DependentUpon>EmpleadoProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\EmpleadoProyecto\ListadoEmpleadosProyecto.rdlc" />
     <EmbeddedResource Include="Reportes\VentaProducto\FrmReporteVentaProducto.resx">
       <DependentUpon>FrmReporteVentaProducto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\VentaProducto\ReporteVentaProducto.rdlc" />
     <None Include="packages.config" />
+    <None Include="pavTpGrupalDataSet.xsc">
+      <DependentUpon>pavTpGrupalDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="pavTpGrupalDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>pavTpGrupalDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="pavTpGrupalDataSet.xss">
+      <DependentUpon>pavTpGrupalDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
